tests/errors/surf_arity_12.ki
# native matrix method given wrong arity: get() with no indices
var m = import("matrix")
var a = m.identity(2)
discard a.get()
